maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:90: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  } else if (y > 0 && getIndication(x,y-1) == valeur-1) {
         ^